RESOLVED FIXED133793
[GTK] REGRESSION: application name is not correctly appended to the UA
https://bugs.webkit.org/show_bug.cgi?id=133793
Summary [GTK] REGRESSION: application name is not correctly appended to the UA
Sergio Villar Senin
Reported 2014-06-12 04:40:43 PDT
[GTK] REGRESSION: application name is not correctly appended to the UA
Attachments
Patch (3.36 KB, patch)
2014-06-12 04:44 PDT, Sergio Villar Senin
no flags
Sergio Villar Senin
Comment 1 2014-06-12 04:44:38 PDT
WebKit Commit Bot
Comment 2 2014-06-12 05:48:21 PDT
Comment on attachment 232945 [details] Patch Clearing flags on attachment: 232945 Committed r169892: <http://trac.webkit.org/changeset/169892>
WebKit Commit Bot
Comment 3 2014-06-12 05:48:23 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.