[GTK] REGRESSION: application name is not correctly appended to the UA https://bugs.webkit.org/show_bug.cgi?id=133793

Reviewed by Carlos Garcia Campos.

Source/WebCore:
We must use a blank to separate the default UA provided by WebKitGtk
from the application name coming from the public API.

Added an extra test case to the API tests to catch regressions.

* platform/gtk/UserAgentGtk.cpp:
(WebCore::standardUserAgent):

Tools:
* TestWebKitAPI/Tests/WebKit2Gtk/TestWebKitSettings.cpp:
(testWebKitSettingsUserAgent):


Canonical link: https://commits.webkit.org/151776@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@169892 268f45cc-cd09-0410-ab3c-d52691b4dbfc